--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,107 @@
 * {
-    margin: 0;
-    padding: 0;
+    margin:0px ;
+    padding:0px ;
+    font-family:  Helvetica;
+    box-sizing: border-box;
 }
+
+/* NavBar */
+
+
+.navbar-container {
+    width: 100%;
+    height: 80px;
+    background-color:#232a31 ;
+    padding:0 2rem;
+}
+
+nav {
+    position: relative;
+ }
+
+ .logo {
+    width: 50px;
+    margin-top: 15px;
+ }
+
+
+ .navbar-items {
+    position: absolute;
+    right:0 ;
+    height:80px;
+    line-height: 80px;
+    margin: 0;
+    display:inline-block ;
+ }
+
+ .navbar-items li {
+    display: inline-block;
+    text-transform: uppercase;
+    padding-left: 10px;
+    
+ }
+
+ .navbar-items a {
+    color: #fff;
+    text-decoration: none;
+    transition: 0.5s;
+ }
+
+ .navbar-items a:hover {
+    color: #ccc;
+ }
+
+ .login-btn {
+    padding: 15px 20px;
+    background-color: green ;
+    border-radius: 5px;
+ }
+
+ .navbar-items .login-btn:hover{
+    background-color: #22bb5f;
+    color: #333;
+
+ }
+
+ /* Main Banner */
+
+.main-banner {
+   text-align: center;
+   background-image: url("../img/mainbanner.png");
+   background-size: cover;
+   background-position: center;
+   padding: 150px 50px 150px 50px;
+   width: 100%;
+   height: 400px;
+}
+
+.main-banner h1,
+.main-banner p {
+   color: #fff;
+   text-shadow: #000 3px 2px  3px;
+}
+
+
+.main-banner h1 {
+   font-size: 50px;
+
+}
+
+.main-banner p {
+   font-size: 30px;
+   font-weight: 600;
+}
+  
+
+
+
+
+
+
+
+
+
+
+
+
 
