Revertido para a versão anterior do CSS

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+p {
+   color: grey;
+}
+
 /* NavBar */
 
 
@@ -30,6 +34,7 @@ nav {
     right:0 ;
     height:80px;
     line-height: 80px;
+    margin: 0;
     display:inline-block ;
  }
 
@@ -44,11 +49,10 @@ nav {
     color: #fff;
     text-decoration: none;
     transition: 0.5s;
-    font-weight: 600a;
  }
 
  .navbar-items a:hover {
-    color: #22bb5f;
+    color: #ccc;
  }
 
  .login-btn {
@@ -90,6 +94,73 @@ nav {
 .main-banner p {
    font-size: 30px;
    font-weight: 600;
+}
+
+/* Services Section */
+
+.services-container {
+   padding: 90px 0;
+
+}
+
+.services-container ul{
+   display: flex;
+   width:85%;
+   margin: 0 auto;
+}
+
+.services-container li {
+   list-style: none;
+   text-align: center;
+   padding: 20px;
+}
+
+.fa-solid {
+   font-size: 70px;
+   padding: 20px;
+}
+
+.fa-shield-halved {
+   color: #22bb5f;
+}
+
+.fa-rocket {
+   color: #c13016;
+}
+
+.fa-comments {
+   color: #e4801d;
+}
+
+.services-container h3 {
+   font-size: 25px;
+}
+
+.services-container p {
+   padding-top: 30px;
+   line-height: 20px;
+}
+
+/* Prices and Plans */
+
+.prices-container {
+   padding: 0 30px;
+   text-align: center;
+}
+
+.prices-container h2 {
+   font-size: 40px ;
+   padding-bottom: 5px; ;
+}
+
+.prices-container p {
+   font-size: 18px ;
+   padding-bottom: 30px; ;
+}
+
+.prices-container ul {
+   display: flex;
+   width:   ;
 }
   
 
