--- a/css/styles.css
+++ b/css/styles.css
@@ -144,24 +144,54 @@ nav {
 /* Prices and Plans */
 
 .prices-container {
-   padding: 0 30px;
+   padding: 10px 30px;
    text-align: center;
 }
 
 .prices-container h2 {
-   font-size: 40px ;
-   padding-bottom: 5px; ;
-}
-
-.prices-container p {
-   font-size: 18px ;
-   padding-bottom: 30px; ;
+   font-size: 70px;
 }
 
 .prices-container ul {
    display: flex;
+   list-style: none;
+   margin:40px 50px;
 }
-  
+
+.prices-container li {
+   padding: 30px;
+   border: 1px solid #22bb5f;
+   border-radius: 10px ;
+   margin-right: 5px;
+}
+
+.prices-container h3 {
+   background-color: #232a31;
+   border: none;
+   width: 250px;
+   padding: 40px;
+   border-radius: 5px;
+   text-transform: uppercase;
+   color: #fff;
+   margin-bottom: 10px;
+}
+
+.prices-container p {
+   line-height: 55px;
+   font-size: 18px;
+}
+
+.btn-green {
+   color: #ccc;
+   font-weight: bold;
+   font-size: 20px;
+   padding: 30px 50px;
+
+}
+
+
+
+
 
 
 
