--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,7 @@ nav {
 /* Services Section */
 
 .services-container {
-   padding: 90px 0;
+   padding: 90px 0 ;
 
 }
 
@@ -144,23 +144,26 @@ nav {
 /* Prices and Plans */
 
 .prices-container {
-   padding: 10px 30px;
+   border-top: 2px dotted #ccc;
+   padding: 100px 0 80px;
    text-align: center;
 }
 
 .prices-container h2 {
-   font-size: 70px;
+   font-size: 50px;
 }
 
 .prices-container ul {
    display: flex;
+   justify-content: center;
    list-style: none;
-   margin:40px 50px;
+   margin-top: 40px;
+   margin-bottom: 100px;
 }
 
 .prices-container li {
    padding: 30px;
-   border: 1px solid #22bb5f;
+   border: 3px groove #22bb5f;
    border-radius: 10px ;
    margin-right: 5px;
 }
@@ -181,14 +184,79 @@ nav {
    font-size: 18px;
 }
 
+
 .btn-green {
-   color: #ccc;
+   margin-top: 20px;
+   color: #fff;
    font-weight: bold;
+   width: 250px;
+   padding: 40px;
    font-size: 20px;
-   padding: 30px 50px;
+   background-color: #22bb5f;
+   text-transform: uppercase;
+   border: none;
+   border-radius: 20px;
+}
+
+.btn-yellow {
+   margin-top: 20px;
+   color: #fff;
+   font-weight: bold;
+   width: 250px;
+   padding: 40px;
+   font-size: 20px;
+   background-color: #dda10b;
+   text-transform: uppercase;
+   border: none;
+   border-radius: 20px;
+}
+
+/* Domain Container */
+
+.domain-container {
+   background-color:#34454e ;
+   width: 100%;
+   height: 400px;
+}
+
+.domain-description {
+   text-align: center;
+   color: #fff;
+   padding-top: 80px;
 
 }
 
+.domain-description h2 {
+   font-size: 40px;
+   padding-bottom: 10px;
+}
+
+.domain-description p {
+   font-size: 25px;
+   color: #ccc;
+   padding-bottom: 10px;
+}
+
+.box-textarea {
+   border-radius: 8px;
+   width: 800px;
+   height: 70px;
+   margin-top: 15px;
+   padding: 20px;
+   color: #ccc;
+   font-size: 18px;
+}
+
+.domain-description button {
+   background-color: #22bb5f;
+   color: #fff;
+   font-size: 20px;
+   font-weight: bold;
+   padding: 20px 30px;
+   border-radius: 8px;
+   border: none;
+   margin-top: 15px;
+}
 
 
 
